--- a/templates/session/index.html.twig
+++ b/templates/session/index.html.twig
@@ -3,8 +3,9 @@
 {% block title %}Liste des sessions{% endblock %}
 
 {% block container %}
-    <h1>Liste des sessions)</h1>
+    <h1>Liste des sessions</h1>
 
+    <a href="{{ path('session_add') }}">Ajouter une session</a>
 
     <table>
         <thead>
@@ -18,10 +19,13 @@
         <tbody>
         {% for session in sessions %}
             <tr>
-                <td>{{ session.formation_id.nom }}</td>
-                <td>{{ session.nb_place }}</td>
-                <td>{{ session.date_debut | date('d-m-Y') }}</td>
-                <td>{{ session.date_fin | date('d-m-Y') }}</td>
+                <td>{{ session.formation.nom }}</td>
+                <td>{{ session.nbPlace }}</td>
+                <td>{{ session.dateDebut | date('d-m-Y') }}</td>
+                <td>{{ session.dateFin | date('d-m-Y') }}</td>
+                <td>
+                    <a href="{{ path('session_edit', {id: session.id}) }}">Editer</a>
+                </td>
             </tr>
         {% endfor %}
         </tbody>
