--- a/templates/chien/index.html.twig
+++ b/templates/chien/index.html.twig
@@ -1,20 +1,25 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ChienController!{% endblock %}
+{% block title %}Listes des chiens
+{% endblock %}
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+{% block container %}
+	<h1>Liste des chiens inscrits</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'D:/laragon/www/DogAcademy/src/Controller/ChienController.php'|file_link(0) }}">src/Controller/ChienController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'D:/laragon/www/DogAcademy/templates/chien/index.html.twig'|file_link(0) }}">templates/chien/index.html.twig</a></code></li>
-    </ul>
-</div>
+	<table>
+		<thead>
+			<tr>
+				<th>Nom du chien</th>
+				<th>Maitre</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for chien in chiens %}
+				<tr>
+					<td>{{ chien.nom }}</td>
+					<td>{{ chien.maitre.prenom ~ ' '~ chien.maitre.nom }}</td>
+				</tr>
+			{% endfor %}
+		</tbody>
+	</table>
 {% endblock %}
