--- a/templates/session/index.html.twig
+++ b/templates/session/index.html.twig
@@ -1,33 +1,34 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste des sessions{% endblock %}
+{% block title %}Liste des sessions de formation
+{% endblock %}
 
 {% block container %}
-    <h1>Liste des sessions</h1>
+	<h1>Liste des sessions</h1>
 
-    <a href="{{ path('session_add') }}">Ajouter une session</a>
+	<a href="{{ path('session_add') }}">Ajouter une session</a>
 
-    <table>
-        <thead>
-            <tr>
-                <th>Formation</th>
-                <th>Places</th>
-                <th>Date de début</th>
-                <th>Date de fin</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for session in sessions %}
-            <tr>
-                <td>{{ session.formation.nom }}</td>
-                <td>{{ session.nbPlace }}</td>
-                <td>{{ session.dateDebut | date('d-m-Y') }}</td>
-                <td>{{ session.dateFin | date('d-m-Y') }}</td>
-                <td>
-                    <a href="{{ path('session_edit', {id: session.id}) }}">Editer</a>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+	<table>
+		<thead>
+			<tr>
+				<th>Formation</th>
+				<th>Places</th>
+				<th>Date de début</th>
+				<th>Date de fin</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for session in sessions %}
+				<tr>
+					<td>{{ session.formation.nom }}</td>
+					<td>{{ session.nbPlace }}</td>
+					<td>{{ session.dateDebut | date('d-m-Y') }}</td>
+					<td>{{ session.dateFin | date('d-m-Y') }}</td>
+					<td>
+						<a href="{{ path('session_edit', {id: session.id}) }}">Editer</a>
+					</td>
+				</tr>
+			{% endfor %}
+		</tbody>
+	</table>
 {% endblock %}
