--- a/templates/atelier/index.html.twig
+++ b/templates/atelier/index.html.twig
@@ -1,20 +1,25 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AtelierController!{% endblock %}
+{% block title %}Liste des Ateliers
+{% endblock %}
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+{% block container %}
+	<h1>Liste des Ateliers</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'D:/laragon/www/DogAcademy/src/Controller/AtelierController.php'|file_link(0) }}">src/Controller/AtelierController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'D:/laragon/www/DogAcademy/templates/atelier/index.html.twig'|file_link(0) }}">templates/atelier/index.html.twig</a></code></li>
-    </ul>
-</div>
+	<table>
+		<thead>
+			<tr>
+				<th>Liste des Ateliers</th>
+				<th>Description</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for atelier in ateliers %}
+				<tr>
+					<td>{{ atelier.libelle }}</td>
+					<td>{{ atelier.description }}</td>
+				</tr>
+			{% endfor %}
+		</tbody>
+	</table>
 {% endblock %}
