update forms and README

--- a/templates/atelier/index.html.twig
+++ b/templates/atelier/index.html.twig
@@ -4,13 +4,13 @@
 {% endblock %}
 
 {% block container %}
-	<h1>Liste des Ateliers</h1>
+	<h1 class="text-center">Liste des Ateliers</h1>
 
-	<table>
+	<table class="table">
 		<thead>
 			<tr>
-				<th>Liste des Ateliers</th>
-				<th>Description</th>
+				<th scope="col">Liste des Ateliers</th>
+				<th scope="col">Description</th>
 			</tr>
 		</thead>
 		<tbody>
