--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -63,7 +63,9 @@
 					</form>
 				</div>
 			</nav>
-			{% block container %}{% endblock %}
+			<div class="container">
+				{% block container %}{% endblock %}
+			</div>
 		{% endblock %}
 	</body>
 </html>
