--- a/templates/categorie/index.html.twig
+++ b/templates/categorie/index.html.twig
@@ -4,12 +4,12 @@
 {% endblock %}
 
 {% block container %}
-	<h1>Liste des catégories</h1>
+	<h1 class="text-center">Liste des catégories</h1>
 
-	<table>
+	<table class="table">
 		<thead>
 			<tr>
-				<th>Catégories des ateliers proposés</th>
+				<th scope="col">Catégories des ateliers proposés</th>
 			</tr>
 		</thead>
 		<tbody>
