--- a/templates/chien/index.html.twig
+++ b/templates/chien/index.html.twig
@@ -4,13 +4,13 @@
 {% endblock %}
 
 {% block container %}
-	<h1>Liste des chiens inscrits</h1>
+	<h1 class="text-center">Liste des Chiens inscrits</h1>
 
-	<table>
+	<table class="table">
 		<thead>
 			<tr>
-				<th>Nom du chien</th>
-				<th>Maitre</th>
+				<th scope="col">Nom du chien</th>
+				<th scope="col">Maitre</th>
 			</tr>
 		</thead>
 		<tbody>
