--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,4 +3,8 @@
 {% block title %}Welcome
 {% endblock %}
 
-{% block container %}{% endblock %}
+{% block container %}
+	<h1 class="text-center">
+		Bienvenue
+	</h1>
+{% endblock %}
