--- a/templates/session/new.html.twig
+++ b/templates/session/new.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Ajout d'une sessuib{% endblock %}
+{% block title %}Ajout d'une session
+{% endblock %}
 
 {% block container %}
-    <h1>Ajout d'une Session</h1>
+	<h1>Ajout d'une Session</h1>
 
-    {{ form(formAddSession) }}
-{% endblock %}
+	{{ form(formAddSession) }}{% endblock %}
