update README forms and styleCSS

--- a/templates/atelier/index.html.twig
+++ b/templates/atelier/index.html.twig
@@ -5,7 +5,7 @@
 
 {% block container %}
 	<h1 class="text-center">Liste des Ateliers</h1>
-
+	<a href="{{ path('atelier_add') }}">Ajouter un atelier</a>
 	<table class="table">
 		<thead>
 			<tr>
