--- a/templates/formation/new.html.twig
+++ b/templates/formation/new.html.twig
@@ -5,4 +5,4 @@
 
 {% block container %}
 	<h1>Ajout d'une Formation</h1>
-	{{ form(formAddSession) }}{% endblock %}
+	{{ form(formAddFormation) }}{% endblock %}
