--- a/templates/chien/index.html.twig
+++ b/templates/chien/index.html.twig
@@ -5,7 +5,7 @@
 
 {% block container %}
 	<h1 class="text-center">Liste des Chiens inscrits</h1>
-
+	<a href="{{ path('chien_add') }}">Ajouter un chien</a>
 	<table class="table">
 		<thead>
 			<tr>
