--- a/templates/maitre/index.html.twig
+++ b/templates/maitre/index.html.twig
@@ -3,6 +3,7 @@
 {% block container %}
 	<h1 class="text-center">Liste des Maîtres inscrits</h1>
 
+	<a href="{{ path('maitre_add') }}">Ajouter un nouveau maitre</a>
 	<table class="table">
 		<thead>
 			<tr>
