--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -87,6 +87,9 @@
 				{% block container %}{% endblock %}
 			</div>
 
+			<footer>
+				Terence Mathieu & Béatrice Machalica | Dog Academy | 2021 Mentions légales
+			</footer>
 		{% endblock %}
 	</body>
 </html>
