--- a/templates/atelier/index.html.twig
+++ b/templates/atelier/index.html.twig
@@ -11,13 +11,20 @@
 			<tr>
 				<th scope="col">Liste des Ateliers</th>
 				<th scope="col">Description</th>
+				<th scope="col"></th>
 			</tr>
 		</thead>
 		<tbody>
 			{% for atelier in ateliers %}
 				<tr>
-					<td>{{ atelier.libelle }}</td>
+					<td>{{ atelier.libelle |capitalize }}</td>
 					<td>{{ atelier.description }}</td>
+					<td>
+						<a href="{{ path('atelier_edit', {id: atelier.id}) }}">Editer</a>
+					</td>
+					<td>
+						<a href="{{ path('atelier_delete', {id: atelier.id}) }}">Supprimer</a>
+					</td>
 				</tr>
 			{% endfor %}
 		</tbody>
