--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -55,7 +55,7 @@
 							</li>
 							<li class="nav-item dropdown">
 								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-									Utilisateurs
+									Les inscriptions
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 									<a class="dropdown-item" href="{{path('maitres_index')}}">Maîtres inscrits</a>
@@ -74,7 +74,7 @@
 				<figure class="bannerFigure">
 					<img class="banner" src="{{ asset('img/banner.jpg') }}" alt="banner">
 					<figcaption class="figcaptionBanner">
-						<span class="logoSpan">Dog Academy</span>
+						<span class="logoSpan">DogAcademy</span>
 						<br>
 						<em>
 							Des formations assez dignes pour le meilleur ami de l'homme.
