--- a/templates/maitre/new.html.twig
+++ b/templates/maitre/new.html.twig
@@ -4,6 +4,6 @@
 {% endblock %}
 
 {% block container %}
-	<h1>Ajout d'une Maitre</h1>
+	<h1>Ajout d'un Maitre</h1>
 
 	{{ form(formAddMaitre) }}{% endblock %}
