--- a/templates/chien/show.html.twig
+++ b/templates/chien/show.html.twig
@@ -6,17 +6,17 @@
 {% block container %}
 	<h1>Informations sur le chien</h1>
 	{# ajouter photo, race, date de naissance, age #}
-	<table>
+	<table class="table">
 		<thead>
 			<tr>
-				<th>Nom du chien</th>
-				<th>Maitre</th>
+				<th scope="col">Nom du chien</th>
+				<th scope="col">Maitre</th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr>
-				<td>{{ chien.nom }}</td>
-				<td>{{ chien.maitre.prenom ~ ' '~ chien.maitre.nom }}</td>
+				<td>{{ chien.nom |capitalize }}</td>
+				<td>{{ chien.maitre.prenom |capitalize ~ ' '~ chien.maitre.nom |capitalize }}</td>
 			</tr>
 		</tbody>
 	</table>
