--- a/templates/session/new.html.twig
+++ b/templates/session/new.html.twig
@@ -4,6 +4,33 @@
 {% endblock %}
 
 {% block container %}
-	<h1>Ajout d'une Session</h1>
+	{% if editMode %}
+		<h1>Modifier la Session</h1>
+	{% else %}
+		<h1>Ajout d'une Session</h1>
+	{% endif %}
 
-	{{ form(formAddSession) }}{% endblock %}
+	{# simplement afficher le formulaire #}
+	{# {{ form(formAddSession) }} #}
+
+	{# début du contenu du formulaire #}
+	{{form_start(formAddSession)}}
+
+	{{form_row(formAddSession.formation)}}
+	{{form_row(formAddSession.nbPlace)}}
+	{{form_row(formAddSession.dateDebut)}}
+	{{form_row(formAddSession.dateFin)}}
+
+
+	{# submit button #}
+		<button type="submit" class="btn btn-outline-primary"> {% if editMode %}
+			Modifier
+		{% else %}
+			Ajouter
+		{% endif %}
+	</button>
+
+	{# fin du formulaire #}
+	{{form_end(formAddSession)}}
+
+{% endblock %}
