--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,7 +54,8 @@ form {
 }
 footer {
   width: 100%;
-  height: 65px;
+  height: 60px;
+  margin-top: 35px;
   background-color: rgb(40, 40, 40);
   color: white;
   font-family: "Roboto Slab", serif;
