--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -33,4 +33,17 @@
 			</div>
 		</div>
 	</article>
+	<article>
+		<h2>Un dressage de qualité</h2>
+		<div class="flex">
+			<div class="col-3"><img src="{{ asset('img/training.jpg') }}" alt="dog picture"></div>
+			<div class="col-3">
+				<p class="text-justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus enim vitae pariatur velit animi sint aliquam commodi culpa. Inventore perferendis voluptate, perspiciatis delectus natus velit in laborum quod esse itaque sunt animi odit deleniti tenetur sit, cupiditate reprehenderit repellendus architecto a. Ut ab expedita delectus laudantium molestias rem sapiente. Eligendi architecto accusamus atque aliquid facilis.</p>
+			</div>
+			<div class="col-3"><img src="{{ asset('img/beachDog.jpg') }}" alt="dog picture"></div>
+			<div class="col-3">
+				<p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit, odio. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus enim vitae pariatur velit animi sint aliquam commodi culpa. Inventore perferendis voluptate, perspiciatis delectus natus velit in laborum quod esse itaque sunt animi odit deleniti tenetur sit, cupiditate reprehenderit repellendus architecto a. Ut ab expedita delectus laudantium molestias rem sapiente. Eligendi architecto accusamus atque aliquid facilis.</p>
+			</div>
+		</div>
+	</article>
 {% endblock %}
