--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -7,6 +7,7 @@
 	<h1 class="text-center">
 		Bienvenue sur DogAcademy
 	</h1>
+	<hr>
 	<article>
 		<h2>À propos
 			<img class="logo" src="{{ asset('img/coeur.png') }}" alt="logo">
@@ -21,6 +22,7 @@
 			</div>
 		</div>
 	</article>
+	<hr>
 	<article>
 		<h2>Le respect au centre de nos priorités</h2>
 		<div class="flex">
@@ -33,16 +35,17 @@
 			</div>
 		</div>
 	</article>
+	<hr>
 	<article>
 		<h2>Un dressage de qualité</h2>
 		<div class="flex">
 			<div class="col-3"><img src="{{ asset('img/training.jpg') }}" alt="dog picture"></div>
 			<div class="col-3">
-				<p class="text-justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus enim vitae pariatur velit animi sint aliquam commodi culpa. Inventore perferendis voluptate, perspiciatis delectus natus velit in laborum quod esse itaque sunt animi odit deleniti tenetur sit, cupiditate reprehenderit repellendus architecto a. Ut ab expedita delectus laudantium molestias rem sapiente. Eligendi architecto accusamus atque aliquid facilis.</p>
+				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus enim vitae pariatur velit animi sint aliquam commodi culpa. Inventore perferendis voluptate, perspiciatis delectus natus velit in laborum quod esse itaque sunt animi odit deleniti tenetur sit, cupiditate reprehenderit repellendus architecto a. Ut ab expedita delectus laudantium molestias rem sapiente. Eligendi architecto accusamus atque aliquid facilis.</p>
 			</div>
 			<div class="col-3"><img src="{{ asset('img/beachDog.jpg') }}" alt="dog picture"></div>
 			<div class="col-3">
-				<p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit, odio. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus enim vitae pariatur velit animi sint aliquam commodi culpa. Inventore perferendis voluptate, perspiciatis delectus natus velit in laborum quod esse itaque sunt animi odit deleniti tenetur sit, cupiditate reprehenderit repellendus architecto a. Ut ab expedita delectus laudantium molestias rem sapiente. Eligendi architecto accusamus atque aliquid facilis.</p>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit, odio. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus enim vitae pariatur velit animi sint aliquam commodi culpa. Inventore perferendis voluptate, perspiciatis delectus natus velit in laborum quod esse itaque sunt animi odit deleniti tenetur sit, cupiditate reprehenderit repellendus architecto a. Ut ab expedita delectus laudantium molestias rem sapiente. Eligendi architecto accusamus atque aliquid facilis.</p>
 			</div>
 		</div>
 	</article>
