--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,21 +22,25 @@ body {
 }
 header {
   width: 100%;
+  background-color: #e4e9ee;
   overflow: hidden;
 }
 .bannerFigure {
   position: relative;
-  width: 100%;
+  width: 85%;
   margin: auto;
 }
 .banner {
   height: 45vh;
+  margin-bottom: 35px;
+}
+.navbar {
+  background-color: #e4e9ee !important;
 }
 h1,
 h2 {
   margin: 25px 0 25px 0;
 }
-
 .figcaptionBanner {
   font-size: 1.5rem;
   position: absolute;
@@ -56,7 +60,7 @@ footer {
   width: 100%;
   height: 60px;
   margin-top: 35px;
-  background-color: rgb(40, 40, 40);
+  background-color: rgb(59, 59, 59);
   color: white;
   font-family: "Roboto Slab", serif;
   display: flex;
