--- a/templates/session/new.html.twig
+++ b/templates/session/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Ajout d'une session
+{% block title %}Session
 {% endblock %}
 
 {% block container %}
