--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Bienvenue
+{% block title %}DogAcademy
 {% endblock %}
 
 {# banner #}
@@ -11,7 +11,7 @@
 			<span class="logoSpan">Bienvenue sur DogAcademy</span>
 			<br>
 			<em>
-				Des formations assez dignes pour le meilleur ami de l'homme.
+				Des formations dignes du meilleur ami de l'homme.
 			</em>
 		</figcaption>
 	</figure>
