--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,8 +26,12 @@
 
 			{# header #}
 			<header>
+
 				{# navbar #}
-				<nav class="navbar navbar-expand-lg navbar-light bg-light">
+				<nav
+					class="navbar navbar-expand-lg navbar-light bg-light">
+
+					{# logo #}
 					<a class="navbar-brand" href="{{path('home')}}">
 						Dog
 						<img class="logo" src="{{ asset('img/coeur.png') }}" alt="logo">
@@ -37,6 +41,7 @@
 						<span class="navbar-toggler-icon"></span>
 					</button>
 
+					{# menu #}
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 						<ul class="navbar-nav mr-auto">
 							<li class="nav-item">
@@ -64,10 +69,13 @@
 								</div>
 							</li>
 						</ul>
+
+						{# search bar #}
 						<form class="form-inline my-2 my-lg-0">
 							<input class="form-control mr-sm-2" type="search" placeholder="Chien policier" aria-label="Search">
 							<button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Rechercher</button>
 						</form>
+
 					</div>
 				</nav>
 				{% block banner %}{% endblock %}
@@ -78,6 +86,8 @@
 				{% block container %}{% endblock %}
 			</div>
 		{% endblock %}
+
+		{# footer #}
 		{% block footer %}{% endblock %}
 	</body>
 </html>
