--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,8 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{# sign in / sign up page #}
-
-{% block title %}DogAcademy
+{% block title %}Hello AdminController!
 {% endblock %}
 
 {% block body %}
