--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -12,6 +12,9 @@
 		<h1>Inscription</h1>
 
 		{{ form_start(registrationForm) }}
+
+		{{ form_row(registrationForm.nom) }}
+		{{ form_row(registrationForm.prenom) }}
 		{{ form_row(registrationForm.email) }}
 		{{ form_row(registrationForm.plainPassword, {
             label: 'Mot de passe'
